# bombadil

./: .envrc  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/actions/setup-nix/: action.yml
.github/workflows/: build-target.yml  ci.yml
docs/development/: AGENTS.md  contributing.md  launch.json
docs/manual/: Makefile  default.nix  shell.nix
docs/manual/src/: 01-introduction.md  02-getting-started.md  03-specification-language.md  04-reference.md  colors.css  driver-switcher.js  driver.lua  landing.html  landing.js  layout.css  template.html
lib/bombadil/: Cargo.toml
lib/bombadil-browser/: Cargo.toml
lib/bombadil-browser-integration-tests/: Cargo.toml
lib/bombadil-browser-integration-tests/tests/: integration_tests.rs
lib/bombadil-browser-integration-tests/tests/action-within-iframe/: index.html  inner.html
lib/bombadil-browser-integration-tests/tests/back-from-non-html/: index.html
lib/bombadil-browser-integration-tests/tests/confirm-dialog/: index.html
lib/bombadil-browser-integration-tests/tests/console-error/: index.html
lib/bombadil-browser-integration-tests/tests/counter-state-machine/: index.html
lib/bombadil-browser-integration-tests/tests/custom-element-slot/: index.html
lib/bombadil-browser-integration-tests/tests/disabled-clicks/: index.html
lib/bombadil-browser-integration-tests/tests/double-click/: index.html
lib/bombadil-browser-integration-tests/tests/extractor-exception/: index.html
lib/bombadil-browser-integration-tests/tests/extractor-guard/: index.html
lib/bombadil-browser-integration-tests/tests/fetch-headers/: index.html
lib/bombadil-browser-integration-tests/tests/file-download/: index.html
lib/bombadil-browser-integration-tests/tests/file-picker/: index.html  testfile.txt
lib/bombadil-browser-integration-tests/tests/granted-permissions/: index.html
lib/bombadil-browser-integration-tests/tests/module-script/: index.html  script.js
lib/bombadil-browser-integration-tests/tests/module-script-external/: index.html  script.js
lib/bombadil-browser-integration-tests/tests/mouse-drag/: index.html
lib/bombadil-browser-integration-tests/tests/mutation/: index.html
lib/bombadil-browser-integration-tests/tests/other-domain/: index.html  other-a.html  other-b.html
lib/bombadil-browser-integration-tests/tests/random-text-input/: index.html
lib/bombadil-browser-integration-tests/tests/set-viewport/: index.html
lib/bombadil-browser-integration-tests/tests/snapshot-references/: index.html
lib/bombadil-browser-integration-tests/tests/time-extractor/: index.html
lib/bombadil-browser-integration-tests/tests/time-limit/: index.html
lib/bombadil-browser-integration-tests/tests/uncaught-exception/: index.html
lib/bombadil-browser-integration-tests/tests/unhandled-promise-rejection/: index.html
lib/bombadil-browser-integration-tests/tests/wait-action/: index.html
lib/bombadil-browser-keys/src/: lib.rs
lib/bombadil-browser/src/: browser.rs  convert.rs  driver.rs  geometry.rs  js_action.rs  lib.rs  render.rs  runner.rs  strategy.rs  url.rs
lib/bombadil-browser/src/browser/: actions.rs  activity.rs  evaluation.rs  instrumentation.rs  keys.rs
lib/bombadil-browser/src/instrumentation/: html.rs  js.rs  mod.rs
lib/bombadil-browser/src/instrumentation/snapshots/: bombadil_browser__instrumentation__html__tests__instrument_html_inline_script_javascript_type.snap  bombadil_browser__instrumentation__html__tests__instrument_html_inline_script_module_type.snap  bombadil_browser__instrumentation__html__tests__instrument_html_inline_script_no_type.snap  bombadil_browser__instrumentation__html__tests__instrument_html_inline_script_other_type.snap  bombadil_browser__instrumentation__html__tests__instrument_html_template.snap  bombadil_browser__instrumentation__js__tests__instrument_source_code_if.snap  bombadil_browser__instrumentation__js__tests__instrument_source_code_if_else.snap  bombadil_browser__instrumentation__js__tests__instrument_source_code_switch.snap  bombadil_browser__instrumentation__js__tests__instrument_source_code_ternary.snap  bombadil_browser__instrumentation__js__tests__instrument_source_code_ternary_assignment.snap  bombadil_browser__instrumentation__js__tests__instrument_source_code_ternary_assignment_with_await.snap  bombadil_browser__instrumentation__js__tests__instrument_source_code_ternary_await.snap  bombadil_browser__instrumentation__js__tests__instrument_source_code_ternary_comma_operator.snap
lib/bombadil-browser/src/trace/: mod.rs  writer.rs
lib/bombadil-cli/: Cargo.toml  build.rs
lib/bombadil-cli/src/: browser.rs  duration.rs  inspect_server.rs  main.rs  output_path.rs  strategy.rs  terminal.rs
lib/bombadil-ltl/: Cargo.toml
lib/bombadil-terminal/: Cargo.toml
lib/bombadil-terminal/examples/: btop.ts  cat.ts  nano.ts  tb.ts  tetris.ts  text_editor.ts  tsconfig.json  type_random.ts
lib/bombadil-terminal/src/: driver.rs  extractors.rs  js.rs  lib.rs  pty.rs  render.rs  state.rs  trace.rs
lib/bombadil-terminal/tests/: integration_test.rs
lib/bombadil/src/: browser.rs  driver.rs  geometry.rs  lib.rs  render.rs  runner.rs  tree.rs
lib/bombadil/src/browser/: actions.rs  quiescence.rs  state.rs
lib/bombadil/src/specification/: actions.ts  convert.rs  defaults.ts  generators.rs  index.ts  internal.ts  js.rs  mod.rs  random_test.rs  resolver.rs  tsconfig.json  verifier.rs  worker.rs
lib/bombadil/src/specification/browser/: defaults.ts  dom.ts  index.ts
lib/bombadil/src/specification/browser/defaults/: actions.ts  properties.ts
lib/bombadil/src/specification/bundler/: mod.rs
lib/bombadil/src/specification/bundler/snapshots/: bombadil__specification__bundler__tests__bundle.snap
lib/bombadil/src/specification/defaults/: actions.ts
lib/bombadil/src/specification/terminal/: defaults.ts  index.ts
lib/bombadil/src/specification/terminal/defaults/: actions.ts  properties.ts
lib/bombadil/src/trace/: mod.rs
lib/integration-tests/: Cargo.toml
lib/nix/: cargo-hotpath.nix  default.nix  npm-package.nix  shell.nix
lib/small-string/: Cargo.toml
(+16 files in other folders)
