[workspace]
members = [
    "lib/bombadil",
    "lib/bombadil-browser",
    "lib/bombadil-browser-keys",
    "lib/bombadil-cli",
    "lib/bombadil-ltl",
    "lib/bombadil-inspect",
    "lib/bombadil-schema",
    "lib/bombadil-terminal",
    "lib/integration-tests",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.99"
axum = "0.8.8"
base64 = "0.22.1"
boa_engine = { git = "https://github.com/boa-dev/boa", rev = "8a3ca7d0978ffadf165989ad0a9a93a6cafd61b4" }
bytes = "1.11.0"
chromiumoxide = "0.9.1"
clap = "4.5.46"
const_format = "0.2.35"
env_logger = "0.11.8"
futures = "0.3.31"
glob = "0.3.3"
gloo-console = "0.3"
gloo-net = "0.6"
gloo-timers = "0.3"
html5ever = "0.36.1"
http = "1.4.0"
http-body-util = "0.1.3"
include_dir = "0.7.4"
indoc = "2.0.7"
insta = "1.43.1"
js-sys = "0.3"
libghostty-vt = { git = "https://github.com/Uzaaft/libghostty-rs", rev = "269c5459c1cb0e1fa30a31d77e27b0bb74b0f0aa" }
log = "0.4.29"
markup5ever_rcdom = "0.36.0"
mime_guess = "2.0"
open = "5.0"
oxc = "0.125.0"
oxc_resolver = "11.19.1"
oxc_str = "0.125.0"
oxc_traverse = "0.125.0"
owo-colors = "4.3.0"
portable-pty = "0.9.0"
proptest = "1.10.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = "1.0.228"
serde_json = "1.0.145"
supports-color = "3.0.2"
tempfile = "3.22.0"
tokio = "1.48.0"
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = "0.6.8"
url = "2.5.7"
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
yew = "0.23"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
