[package]
name = "bombadil-browser-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
anyhow.workspace = true
axum.workspace = true
bombadil = { path = "../bombadil" }
bombadil-browser = { path = "../bombadil-browser" }
bombadil-ltl = { path = "../bombadil-ltl" }
bombadil-schema = { path = "../bombadil-schema" }
env_logger.workspace = true
indoc.workspace = true
insta.workspace = true
log.workspace = true
proptest.workspace = true
rand.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tower.workspace = true
tower-http = { workspace = true, features = ["fs"] }
url.workspace = true
