[package]
name = "bombadil-terminal"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bombadil = { path = "../bombadil" }
clap = { workspace = true, features = ["derive"] }
libghostty-vt = { workspace = true, features = ["link-static"] }
owo-colors = { workspace = true, features = ["supports-colors"] }
portable-pty.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["full"] }
