[package]
name = "bombadil-terminal"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
boa_engine.workspace = true
bombadil = { path = "../bombadil" }
bombadil-schema = { path = "../bombadil-schema" }
libghostty-vt = { workspace = true, features = ["link-static"] }
log.workspace = true
portable-pty.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
env_logger.workspace = true
tempfile.workspace = true
